<resources>
    <string name="app_name">Diet Tracker</string>

    <string name="addFood">Add Food</string>
    <string name="foodDetailsPage">Food Details</string>
    <string name="updateFoodDetails">Update Food Details</string>

    <string name="goal">Goal</string>
    <string name="took">Took</string>
    <string name="remainin">Remaining</string>
    <string name="searchFood">Search food</string>
    <string name="noOfServings">Number of Servings</string>

    <string name="Carbs_g">Carbs(g)</string>
    <string name="fat_g">Fat(g)</string>
    <string name="protein_g">Protein(g)</string>
    <string name="calories">Calories</string>
    <string name="search">Search</string>

    <string name="dietDiary">Diet Diary</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="add_food">+ Add Food</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="calorie">Calorie</string>

</resources>