<?xml version="1.0" encoding="utf-8"?>
<!--
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/diary_page_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

-->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            style="@style/diary_page_card_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/textViewBreakfastTitle"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        style="@style/textView_values"
                        android:text="@string/carbs" />

                    <TextView
                        style="@style/textView_values"
                        android:text="@string/fat" />

                    <TextView
                        style="@style/textView_values"
                        android:text="@string/protein" />

                    <TextView
                        style="@style/textView_values"
                        android:text="@string/calorie" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/textViewTotalCarbs"
                        style="@style/textView_values"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textViewTotalFat"
                        style="@style/textView_values"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textViewTotalProtein"
                        style="@style/textView_values"
                        android:text="0" />

                    <TextView
                        android:id="@+id/textViewTotalCalories"
                        style="@style/textView_values"
                        android:text="0" />
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutAddFood"
            style="@style/diary_page_card_add_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewAddFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/add_food" />

        </RelativeLayout>
    </LinearLayout>
<!--
</android.support.v7.widget.CardView>-->
