<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary">

        <include layout="@layout/toolbar_layout" />
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="45dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layer_list_bottom_thin_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFoodName"
                    style="@style/add_food_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food Name"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:minHeight="45dp"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@drawable/layer_list_bottom_thin_border"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFoodDesc"
                    style="@style/add_food_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Food Desc" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:minHeight="45dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layer_list_bottom_thin_border"
                android:orientation="horizontal">

                <TextView
                    style="@style/add_food_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/noOfServings" />

                <EditText
                    android:id="@+id/editTextNoOfServings"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:inputType="number"
                    android:text="1" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@drawable/layer_list_bottom_thin_border"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="Facts for a unit:"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:stretchColumns="*">

                    <TableRow>

                        <TextView
                            android:id="@+id/textViewCarbs"
                            style="@style/food_nutrition_fact_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />

                        <TextView
                            android:id="@+id/textViewFat"
                            style="@style/food_nutrition_fact_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />

                        <TextView
                            android:id="@+id/textViewProtein"
                            style="@style/food_nutrition_fact_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />

                        <TextView
                            android:id="@+id/textViewCalories"
                            style="@style/food_nutrition_fact_values"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="-" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/food_nutrition_fact_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Carbs_g" />

                        <TextView
                            style="@style/food_nutrition_fact_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fat_g" />

                        <TextView
                            style="@style/food_nutrition_fact_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/protein_g" />

                        <TextView
                            style="@style/food_nutrition_fact_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/calories" />
                    </TableRow>

                </TableLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
